samples/_failures_safe/1761555990_21cb3f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0c76c240.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_0c76c240.c:143:13: error: expected identifier at end of input
  143 |             result->data[j][i] = m->
      |             ^~~~~~
./samples/SAFE/__tmp_0c76c240.c:143:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0c76c240.c:143:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0c76c240.c:143:13: error: expected declaration or statement at end of input
